--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -61,9 +61,7 @@ jobs:
         with:
           java-version: 8
       - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly}"
-      - run: cmd /C rd /S /Q %USERPROFILE%\.mill
-      - run: cmd /C copy "%GITHUB_WORKSPACE%\out\assembly\dest\mill" "%GITHUB_WORKSPACE%\mill-release"
-      - run: cmd /C %GITHUB_WORKSPACE%\mill-release -i "{main.test,scalalib.test,scalajslib.test}"
+      - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{main,scalalib,scalajslib,bsp}.__.testCached"
 
   publish-sonatype:
     if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
