Don't test in parallel

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,9 +18,10 @@ jobs:
           - ci/test-mill-dev.sh
           - ci/test-mill-bootstrap-0.sh
           - ci/test-mill-bootstrap-1.sh
-          - ./mill -i -j 0 "{main,scalalib,scalajslib,scalanativelib,contrib.twirllib,contrib.playlib,main.client,contrib.scalapblib,contrib.flyway,contrib.scoverage}.test"
-          - ./mill -i -j 0 integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
-          - ./mill -i -j 0 integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
+          - ./mill -i "{main,scalalib,scalajslib,scalanativelib,bsp}.__.testCached
+          - ./mill -i "contrib.__.testCached"
+          - ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
+          - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.generate
         exclude:
           - java-version: 11
