--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,9 @@ jobs:
           - ci/test-mill-bootstrap-0.sh
           - ci/test-mill-bootstrap-1.sh
           - ./mill -i "{main,scalalib,scalajslib,scalanativelib,bsp}.__.testCached"
-          - ./mill -i "contrib.__.testCached"
+          # disabled contrib.proguard
+          # - ./mill -i "contrib.__.testCached"
+          - ./mill -i "contrib.{artifactory,bintray,bloop,buildinfo,docker,flyway,playlib,scalapblib,scoverage,testng,tut,twirllib,versionfile}.__.testCached"
           - ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.generate
