--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,12 +20,12 @@ jobs:
           - ci/test-mill-bootstrap-1.sh
           - ./mill -i "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
           - ./mill -i "contrib._.test"
-          - ci/test-mill-1.sh
+          - ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.generate
         exclude:
           - java-version: 11
-            buildcmd: ci/test-mill-1.sh
+          - buildcmd: ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
           - java-version: 11
             buildcmd: ci/test-mill-release.sh
 
