--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -48,35 +48,38 @@ jobs:
           git config --add user.email "mill-ci@localhost"
           ${{ matrix.buildcmd }}
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 8
-      - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
-
   test-windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "main.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "scalalib.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "scalajslib.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "bsp.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "contrib._.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.UpickleTests"
+
     runs-on: windows-latest
     continue-on-error: true
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v1
         with:
-          java-version: 8
-      - name: Test core
-        run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
-      - name: Test contrib
-        run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "contrib._.test"
+          java-version: ${{ matrix.java-version }}
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: ${{ matrix.buildcmd }}
 
   publish-sonatype:
     if: github.repository == 'lihaoyi/mill' && github.ref == 'refs/heads/master'
-    needs: [test, build-windows, test-windows]
+    needs: [test, test-windows]
 
     runs-on: ubuntu-latest
 
