Updated GitHub release mechanism and fixed urls

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -104,8 +104,8 @@ jobs:
     strategy:
       matrix:
         buildcmd:
-          - ci/on-master.py ci/release-github.sh
-          - ci/on-master.py ci/publish-docs.sh
+          - ci/release-github.sh
+          - ci/publish-docs.sh
 
     runs-on: ubuntu-latest
 
