--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -53,9 +53,30 @@ jobs:
         buildcmd:
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalajslib,bsp}.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
+
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java-version }}
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: ${{ matrix.buildcmd }}
+
+  test-windows-faulty:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "scalalib.__.test"
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "contrib._.test"
-          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
 
     runs-on: windows-latest
     continue-on-error: true
@@ -74,7 +95,7 @@ jobs:
 
   publish-sonatype:
     if: github.repository == 'com-lihaoyi/mill' && github.ref == 'refs/heads/master'
-    needs: [test, build-windows, test-windows]
+    needs: [test, test-windows, test-windows-faulty]
 
     runs-on: ubuntu-latest
 
