CI: No need to wait for faulty win tests for publish/release

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -95,7 +95,7 @@ jobs:
 
   publish-sonatype:
     if: github.repository == 'com-lihaoyi/mill' && github.ref == 'refs/heads/master'
-    needs: [test, test-windows, test-windows-faulty]
+    needs: [test, test-windows]
 
     runs-on: ubuntu-latest
 
