--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
           - ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
           # - ./mill -i integration.test "mill.integration.local.JawnTests"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
-          - ./mill -i docs.generate
+          - ./mill -i docs.antora.githubPages
         exclude:
           - java-version: 11
             buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
