--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,12 +19,13 @@ jobs:
           - ci/test-mill-bootstrap-1.sh
           - ./mill -i "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
           - ./mill -i "contrib._.test"
-          - ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
+          - ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
+          # - ./mill -i integration.test "mill.integration.local.JawnTests"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.generate
         exclude:
           - java-version: 11
-            buildcmd: ./mill -i integration.test "mill.integration.local.{JawnTests,BetterFilesTests,UpickleTests}"
+            buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
           - java-version: 11
             buildcmd: ci/test-mill-release.sh
 
@@ -45,7 +46,7 @@ jobs:
           git config --add user.email "mill-ci@localhost"
           ${{ matrix.buildcmd }}
 
-  build-windows:
+  test-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -56,7 +57,7 @@ jobs:
           java-version: 8
       - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
 
-  test-windows:
+  test-windows-faulty:
     runs-on: windows-latest
     continue-on-error: true
     steps:
@@ -73,7 +74,7 @@ jobs:
 
   publish-sonatype:
     if: github.repository == 'com-lihaoyi/mill' && github.ref == 'refs/heads/master'
-    needs: [test, build-windows, test-windows]
+    needs: [test, test-windows]
 
     runs-on: ubuntu-latest
 
