--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,8 +17,8 @@ jobs:
           - ci/test-mill-dev.sh
           - ci/test-mill-bootstrap-0.sh
           - ci/test-mill-bootstrap-1.sh
-          - ./mill -i "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
-          - ./mill -i "contrib._.test"
+          - ./mill -i -k "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
+          - ./mill -i -k "contrib._.test"
           - ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
           # - ./mill -i integration.test "mill.integration.local.JawnTests"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
@@ -47,30 +47,52 @@ jobs:
           ${{ matrix.buildcmd }}
 
   test-windows:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalajslib,bsp}.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
+
     runs-on: windows-latest
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v1
         with:
-          java-version: 8
-      - run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i "{__.publishLocal,assembly,__.compile}"
+          java-version: ${{ matrix.java-version }}
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: ${{ matrix.buildcmd }}
 
   test-windows-faulty:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "scalalib.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "contrib._.test"
+
     runs-on: windows-latest
     continue-on-error: true
+
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v1
         with:
-          java-version: 8
-      - name: Test core
-        run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
-      - name: Test contrib
-        run: cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d "contrib._.test"
+          java-version: ${{ matrix.java-version }}
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: ${{ matrix.buildcmd }}
 
   publish-sonatype:
     if: github.repository == 'com-lihaoyi/mill' && github.ref == 'refs/heads/master'
