--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: ci-push-validation
+name: Build and Release
 
 on:
   push:
@@ -138,21 +138,3 @@ jobs:
           java-version: 9
 
       - run: ci/release-github.sh
-
-  publish-site:
-    if: github.repository == 'com-lihaoyi/mill' && github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    env:
-      REPO_DEPLOY_KEY: ${{ secrets.REPO_DEPLOY_KEY }}
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 8
-
-      - run: ci/publish-docs.sh
-
