--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,5 +1,9 @@
 name: mill
 title: Mill Documentation
-version: '0.9.5'
+version: '0.9.6'
 nav:
   - modules/ROOT/nav.adoc
+asciidoc:
+  attributes:
+    mill-version: '0.9.6'
+    mill-last-tag: '0.9.6'
