--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         java-version: [8, 11]
         buildcmd:
+          - ci/test-mill-release.sh
           - ci/test-mill-dev.sh
           - ci/test-mill-bootstrap-0.sh
           - ci/test-mill-bootstrap-1.sh
@@ -23,13 +24,7 @@ jobs:
           - ./mill -i docs.antora.githubPages
         include:
           - java-version: 8
-            buildcmd: ci/test-mill-release.sh
-          - java-version: 9
-            buildcmd: ci/test-mill-release.sh
-          - java-version: 8
             buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
-          - java-version: 9
-            buildcmd: ./mill -i integration.test "mill.integration.local.CaffeineTests"
 
     runs-on: ubuntu-latest
 
