--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,15 +19,12 @@ jobs:
           - ci/test-mill-bootstrap-1.sh
           - ./mill -i -k "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
           - ./mill -i -k "contrib._.test"
-          - ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
           # - ./mill -i integration.test "mill.integration.local.JawnTests"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.antora.githubPages
-        exclude:
-          - java-version: 11
+        include:
+          - java-version: 8
             buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
-          - java-version: 11
-            buildcmd: ci/test-mill-release.sh
 
     runs-on: ubuntu-latest
 
