github release script: don't use locally built mill

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -133,4 +133,4 @@ jobs:
         with:
           java-version: 9
 
-      - run: ci/release-github.sh
+      - run: ./mill -i uploadToGithub $REPO_ACCESS_TOKEN
