Disabled always failing integration test suite
The test issue is related to this message and happened also sometimes in the past:

> utest.AssertionError: assert(eval("core.test"))
> java.lang.Exception: Resource amm-dependencies.txt not found

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,7 +24,8 @@ jobs:
           - ./mill -i docs.antora.githubPages
         include:
           - java-version: 8
-            buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
+            # buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
+            buildcmd: ./mill -i integration.test "mill.integration.local.UpickleTests"
 
     runs-on: ubuntu-latest
 
