Fixed snapshot publishing for 0.9.x branch

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -92,7 +92,7 @@ jobs:
 
   publish-sonatype:
     # when in master repo: all commits to main branch and all additional tags
-    if: github.repository == 'com-lihaoyi/mill' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/head/0.9.x' || startsWith( github.ref, 'refs/tags/' ) )
+    if: github.repository == 'com-lihaoyi/mill' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.9.x' || startsWith( github.ref, 'refs/tags/' ) )
     needs: [test, test-windows]
 
     runs-on: ubuntu-latest
@@ -119,7 +119,7 @@ jobs:
 
   release-github:
     # when in master repo: all commits to main branch and all additional tags
-    if: github.repository == 'com-lihaoyi/mill' && ( github.ref == 'refs/heads/main' || (github.ref != 'refs/heads/main' && startsWith( github.ref, 'refs/tags/') ) )
+    if: github.repository == 'com-lihaoyi/mill' && ( github.ref == 'refs/heads/main' || github.ref == 'refs/heads/0.9.x' || startsWith( github.ref, 'refs/tags/' ) )
     needs: publish-sonatype
     runs-on: ubuntu-latest
 
