--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -52,6 +52,9 @@ jobs:
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{__.publishLocal,assembly,__.compile}"
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalalib,scalajslib,bsp}.__.test"
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
+          # selected contrib tests (all will run in test-windows-faulty job
+          # TODO: fix all and make this CI run more generic
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "contrib.{artifactory,bintray,bloop,buildinfo,codeartifact,docker,flyway,scalapblib,testng,twirllib,versionfile}.test"
 
     runs-on: windows-latest
 
