--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -49,10 +49,10 @@ jobs:
       matrix:
         java-version: [8, 11]
         buildcmd:
-          - %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{__.publishLocal,assembly,__.compile}"
-          - %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalalib,scalajslib,bsp}.__.test"
-          - %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
-          - %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k all "contrib.__.prepareOffline" "contrib.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{__.publishLocal,assembly,__.compile}"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalalib,scalajslib,bsp}.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k all "contrib.__.prepareOffline" "contrib.__.test"
 
     runs-on: windows-latest
 
@@ -67,7 +67,6 @@ jobs:
 
       - name: Run '${{ matrix.buildcmd }}'
         run: ${{ matrix.buildcmd }}
-        shell: cmd
 
   publish-sonatype:
     # when in master repo: all commits to main branch and all additional tags
