--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,7 +17,7 @@ jobs:
           - ci/test-mill-bootstrap-0.sh
           - ci/test-mill-bootstrap-1.sh
           - ./mill -i -k "{main,scalalib,scalajslib,scalanativelib,bsp}.__.test"
-          - ./mill -i -k "contrib._.test"
+          - ./mill -i -k all "contrib.__.prepareOffline" "contrib._.test"
           # - ./mill -i integration.test "mill.integration.local.JawnTests"
           - ./mill -i integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           - ./mill -i docs.antora.githubPages
@@ -53,7 +53,7 @@ jobs:
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "{main,scalalib,scalajslib,bsp}.__.test"
           - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d integration.test "mill.integration.local.{AcyclicTests,AmmoniteTests,DocAnnotationsTests}"
           # selected contrib tests (all except scoverage)
-          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k "contrib.{artifactory,bintray,bloop,buildinfo,codeartifact,docker,flyway,playlib,proguard,scalapblib,testng,twirllib,versionfile}.__.test"
+          - cmd /C %GITHUB_WORKSPACE%\ci\mill.bat -i -d -k all "contrib.__.prepareOffline" "contrib.{artifactory,bintray,bloop,buildinfo,codeartifact,docker,flyway,playlib,proguard,scalapblib,testng,twirllib,versionfile}.__.test"
 
     runs-on: windows-latest
 
