--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -1,9 +1,9 @@
 name: mill
 title: Mill Documentation
-version: '0.9.9'
+version: '0.10.0-M2'
 nav:
   - modules/ROOT/nav.adoc
 asciidoc:
   attributes:
-    mill-version: '0.9.9'
-    mill-last-tag: '0.9.9'
+    mill-version: '0.10.0-M2'
+    mill-last-tag: '0.10.0-M2'
