--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,16 +1,18 @@
-version = "2.7.5"
+version = "3.0.4"
 
 align.preset = none
 align.openParenCallSite = false
+align.stripMargin = true
 
 assumeStandardLibraryStripMargin = true
 
 continuationIndent.callSite = 2
 continuationIndent.defnSite = 4
 
-docstrings = JavaDoc
+docstrings.style = Asterisk
+docstrings.oneline = keep
+docstrings.wrap = no
 
 maxColumn = 100
 
-#newlines.afterImplicitParamListModifier = true
 newlines.source = keep
