Setup mima plugin to check for binary compatibility (#1494)
* Setup mima plugin to check for binary compatibility
* Enable binary compatibility checks in CI
* Added MiMa problem filters for known issues

Pull request: https://github.com/com-lihaoyi/mill/pull/1494

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,7 @@ jobs:
           - |
             ./mill -i contrib.testng.publishLocal
             ./mill -i integration.test "mill.integration.local.CaffeineTests"
+          - ./mill -i -k __.mimaReportBinaryIssues
         include:
           - java-version: 8
             # buildcmd: ./mill -i integration.test "mill.integration.local.{BetterFilesTests,UpickleTests}"
