--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -51,6 +51,34 @@ jobs:
       - name: Run '${{ matrix.buildcmd }}'
         run: ${{ matrix.buildcmd }}
 
+  test-optional:
+    strategy:
+      fail-fast: false
+      matrix:
+        java-version: [8, 11]
+        buildcmd:
+          - ./mill -i -k __.mimaReportBinaryIssues
+
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java-version }}
+
+      - name: Prepare git config
+        run: |
+          git config --add user.name "Mill GithHub Actions"
+          git config --add user.email "mill-ci@localhost"
+
+      - name: Run '${{ matrix.buildcmd }}'
+        run: ${{ matrix.buildcmd }}
+
   test-windows:
     strategy:
       fail-fast: false
