--- a/docs/antora/antora.yml
+++ b/docs/antora/antora.yml
@@ -7,3 +7,6 @@ asciidoc:
   attributes:
     mill-version: '0.10.0-M3'
     mill-last-tag: '0.10.0-M3'
+    bsp-version: '2.0.0'
+    example-semanticdb-version: '4.4.29'
+    example-scala-version: '2.13.7'
